	PR middle-end/45035 	* alias.c (true_dependence_1): Fix thinko in merge of old 	true_dependence and canon_true_dependence.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@162499 138bc75d-0d04-0410-961f-82ee72b054a4